--- a/libraries/cmake/facebook/googletest/CMakeLists.txt
+++ b/libraries/cmake/facebook/googletest/CMakeLists.txt
@@ -56,8 +56,11 @@ function(googletestMain)
     thirdparty_cxx_settings
     thirdparty_googletest_headers
     thirdparty_googlemock_headers
-    thirdparty_glibc_pthread
   )
+
+  if(DEFINED PLATFORM_POSIX)
+    target_link_libraries(thirdparty_googletest PUBLIC thirdparty_glibc_pthread)
+  endif()
 
   if(DEFINED PLATFORM_WINDOWS)
     target_compile_options(thirdparty_googletest PRIVATE /EHsc)
