Several hotfixes for compiling OpenSSL
- Update to the new target names.
- Pass cxx flags where cxx flags are expected, not c ones.
- When launching the CMake command that gives the metadata output,
  Ninja also outputs the command itself, so the metadata output
  we are interested in is on the last line.
  As hack we reverse the search so we are sure that we are reading the
  last output line.
- Use -fPIC to compile OpenSSL
- Do not use shell append to create the log file the first time.
- Always set project, build, install variables which are used by the
  thirdparty_openssl target.
- Include directory not correctly set and inherited
- Imported targets not correctly created and linked
- Do not use $(MAKE), this is only used when make is used as a
  subcommand in a project that has been generated with Makefile,
  so that the jobserver do not spawn too many jobs.
  With Ninja this is not the case and the variable is not defined,
  we also want the two build systems to be separated,
  so use the make command directly.

--- a/libraries/cmake/formula/openssl/CMakeLists.txt
+++ b/libraries/cmake/formula/openssl/CMakeLists.txt
@@ -36,15 +36,16 @@ function(opensslMain)
         "--with-zlib-include=${thirdparty_zlib_INCLUDE_DIRS}"
         "--with-zlib-lib=${thirdparty_zlib_LIBRARIES}"
         linux-x86_64
+        -fPIC
 
     BUILD_COMMAND
      "${CMAKE_COMMAND}" -E env CC="${CMAKE_C_COMPILER}"
      "${CMAKE_COMMAND}" -E make_directory "${CMAKE_INSTALL_PREFIX}/etc/openssl" &&
-      $(MAKE) depend -j 10 &&
-      $(MAKE) -j 10
+      make depend -j 10 &&
+      make -j 10
 
     INSTALL_COMMAND
-      $(MAKE) install
+      make install
 
     BUILD_IN_SOURCE true
   )
